# Solbox-Contract-Devnet

./: .env  Anchor.toml  README.md  Xargo.toml  new task.txt  oldcontract_librs.txt  package-lock.json  package.json  solbox_contract_devnet.json
programs/solbox-contract-devnet/: Cargo.toml
programs/solbox-contract-devnet/src/: lib.rs
tests/: devnet-test.ts  large-scale-test.ts  solbox-contract-devnet.ts
